--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "antd": "^5.27.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lexical": "^0.37.0",
     "lucide-react": "^0.544.0",
